--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/darkly/bootstrap.min.css"
     rel="stylesheet"
   />
-  <title>JS Todo List</title>
+  <title>Prueba 1</title>
 </head>
 <body>
   <!-- Navbar -->
